--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ color: #333333;
 # Registrasi & Login
 --------------------------------------------------------------*/
 .password_info {
-  background-color: #94f6c8;
+  background-color: #e1e1e1;
   border: 2px dashed #325261;
   display: none;
   border-radius: 4px;
@@ -196,7 +196,7 @@ color: #333333;
 }
 
 .bg-signup {
-  background: url(../img/bg-login-equo.png);
+  background: url(../img/bg-login-blip.png);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
@@ -212,19 +212,29 @@ color: #333333;
 }
 
 .btn-signup {
-  background-color: #FFCE00;
-  color: #B90B0B;
-  border-radius: 999999999px;
+  background-color: #B90B0B;
+  color: #ffffff;
+  border-radius: 9px;
   padding: 0.8rem 2.5rem;
+  box-shadow: 0px 4px 61px 0px rgba(195, 71, 108, 0.40);
 }
  .btn-signup:hover {
-  background-color: #bf9900;
+  background-color: #780000;
   color: #ffffff;
  }
 
  .input-group.custom-login-input {
-  border: 1px solid #EEEEEE;
-  border-radius: 999999px;
+  border-radius: 8px;
+  background-color: #FFEFF8;
+  height: 60px;
+ }
+
+ .input-group.custom-login-input input, 
+ .input-group.custom-login-input input::placeholder,
+ .input-group.custom-login-input input:focus {
+  color: #FFA3BE;
+  height: 55px;
+  background-color: #FFEFF8 ;
  }
 
 
@@ -1108,7 +1118,7 @@ color: #333333;
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #004C51;
+  background: #cb0000;
   width: 40px;
   height: 40px;
   border-radius: 4px;
