--- a/assets/css/adm/styles.css
+++ b/assets/css/adm/styles.css
@@ -13097,3 +13097,38 @@ body {
 
   color: #000000;
 }
+
+
+input.pill-currency {
+  margin-left: 0 !important;
+  width: 3.5em;
+  height: 1.5em;
+  background-color: #efefef !important;
+  background: url(../../img/checkbox-ball.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: left center;
+  box-shadow: inset 0px 6px 8px 3px rgba(0, 0, 0, 0.1);
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+input.pill-currency:checked {
+  margin-left: 0 !important;
+  width: 3.5em;
+  height: 1.5em;
+  background-color: #B90B0B !important;
+  background: url(../../img/checkbox-ball-chacked.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: right center;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
